# mvp-base

./: .gitignore  README.md
back/: README.md  deploy.sh  lambda_handler.py  pyproject.toml  requirements.txt  template.yaml
back/sql/: init.sql
back/src/: main.py
back/src/core/: auth.py  config.py  database.py
back/src/models/: user.py
back/src/repositories/: user.py
back/src/routes/: auth.py
back/src/schemas/: auth.py
back/src/services/: auth.py
front/: nuxt.config.ts  package-lock.json  package.json
front/app/assets/themes/: theme.js
front/app/components/: AppHeader.vue  AppNavigation.vue
front/app/layouts/: default.vue
front/app/pages/: demo.vue  docs.vue  index.vue  login-1.vue  login-2.vue  settings.vue
